--- a/rmd/02_beauty_of_across.Rmd
+++ b/rmd/02_beauty_of_across.Rmd
@@ -409,11 +409,16 @@ db <- tibble::tribble(
 db
 ```
 
-- 将`tb`一行中最大的数变为1，其余的变为0 (提示，参考每天水分和食物各自所占比例的代码）
+- 将`tb`一行中最大的数变为1，其余的变为0 (提示，参考计算每天水分和食物各自所占比例的代码）
 
 ```{r}
-tb <- matrix(sample(1:9, 12, replace = T), ncol = 3) %>%
-      as_tibble()
+tb <- tibble::tribble(
+   ~a,  ~b,  ~c,
+   2,  4,  3,
+  13,  9,  4,
+   1,  7,  9,
+  11, 13, 13
+  )
 tb
 ```
 
