--- a/rmd/05_stan.Rmd
+++ b/rmd/05_stan.Rmd
@@ -98,6 +98,36 @@ icecream %>%
 
 
 
+## lm()
+
+```{r}
+fit_lm <- lm(units ~ 1 + temp, data = icecream)
+
+summary(fit_lm)
+```
+
+
+
+
+```{r}
+confint(fit_lm, level = 0.95)
+```
+
+
+
+
+```{r}
+# Confidence Intervals
+# coefficient +- qt(1-alpha/2, degrees_of_freedom) * standard errors
+
+coef <- summary(fit_lm)$coefficients[2, 1] 
+err  <- summary(fit_lm)$coefficients[2, 2]
+
+coef + c(-1,1)*err*qt(0.975,  nrow(icecream) - 2) 
+```
+
+
+
 
 ## 线性模型
 
@@ -282,36 +312,6 @@ fit_normal %>%
 
 
 
-
-## 与lm()对比
-
-```{r}
-fit_lm <- lm(units ~ 1 + temp, data = icecream)
-
-summary(fit_lm)
-```
-
-```{r}
-confint(fit_lm, level = 0.95)
-```
-
-
-
-
-
-
-
-
-
-```{r}
-# Confidence Intervals
-# coefficient +- qt(1-alpha/2, degrees_of_freedom) * standard errors
-
-coef <- summary(fit_lm)$coefficients[2,1] 
-err  <- summary(fit_lm)$coefficients[2,2]
-
-coef + c(-1,1)*err*qt(0.975,  nrow(icecream) - 2) 
-```
 
 
 
