--- a/rmd/06_intro_stan.Rmd
+++ b/rmd/06_intro_stan.Rmd
@@ -47,7 +47,7 @@ writeLines('PATH="${RTOOLS40_HOME}\\usr\\bin;${PATH}"', con = "~/.Renviron")
 
 ```{r, eval=FALSE}
 remove.packages(c("rstan", "StanHeaders"))
-install.packages("rstan", repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
+install.packages(c("rstan", "StanHeaders"), repos = c("https://mc-stan.org/r-packages/", getOption("repos")))
 install.packages(c("tidybayes", "bayesplot"))
 ```
 
